@@ -9,19 +9,24 @@ package io.camunda.service;
 
 import io.camunda.search.clients.TenantSearchClient;
 import io.camunda.search.entities.TenantEntity;
+import io.camunda.search.exception.CamundaSearchException;
 import io.camunda.search.exception.NotFoundException;
-import io.camunda.search.query.SearchQueryBuilders;
+import io.camunda.search.page.SearchQueryPage;
 import io.camunda.search.query.SearchQueryResult;
 import io.camunda.search.query.TenantQuery;
 import io.camunda.security.auth.Authentication;
 import io.camunda.security.auth.Authorization;
+import io.camunda.service.exception.ForbiddenException;
 import io.camunda.service.search.core.SearchQueryService;
 import io.camunda.service.security.SecurityContextProvider;
 import io.camunda.zeebe.broker.client.api.BrokerClient;
+import io.camunda.zeebe.gateway.impl.broker.request.BrokerTenantEntityRequest;
 import io.camunda.zeebe.gateway.impl.broker.request.tenant.BrokerTenantCreateRequest;
 import io.camunda.zeebe.gateway.impl.broker.request.tenant.BrokerTenantDeleteRequest;
 import io.camunda.zeebe.gateway.impl.broker.request.tenant.BrokerTenantUpdateRequest;
 import io.camunda.zeebe.protocol.impl.record.value.tenant.TenantRecord;
+import io.camunda.zeebe.protocol.record.value.EntityType;
+import java.util.Collection;
 import java.util.concurrent.CompletableFuture;
 
 public class TenantServices extends SearchQueryService<TenantServices, TenantQuery, TenantEntity> {
@@ -62,17 +67,63 @@ public class TenantServices extends SearchQueryService<TenantServices, TenantQue
   }
 
   public CompletableFuture<TenantRecord> deleteTenant(final long key) {
-    return sendBrokerRequest(new BrokerTenantDeleteRequest(key).setTenantKey(key));
+    return sendBrokerRequest(new BrokerTenantDeleteRequest(key));
   }
 
-  public TenantEntity getByKey(final Long key) {
-    final SearchQueryResult<TenantEntity> result =
-        search(SearchQueryBuilders.tenantSearchQuery().filter(f -> f.key(key)).build());
+  public TenantEntity getByKey(final Long tenantKey) {
+    return getSingle(TenantQuery.of(q -> q.filter(f -> f.key(tenantKey))));
+  }
+
+  public CompletableFuture<TenantRecord> addMember(
+      final Long tenantKey, final EntityType entityType, final long entityKey) {
+    return sendBrokerRequest(
+        BrokerTenantEntityRequest.createAddRequest()
+            .setTenantKey(tenantKey)
+            .setEntity(entityType, entityKey));
+  }
+
+  public CompletableFuture<TenantRecord> removeMember(
+      final Long tenantKey, final EntityType entityType, final long entityKey) {
+    return sendBrokerRequest(
+        BrokerTenantEntityRequest.createRemoveRequest()
+            .setTenantKey(tenantKey)
+            .setEntity(entityType, entityKey));
+  }
+
+  public Collection<TenantEntity> getTenantsByMemberKey(final long memberKey) {
+    return search(
+            TenantQuery.of(
+                queryBuilder ->
+                    queryBuilder
+                        .filter(filterBuilder -> filterBuilder.memberKey(memberKey))
+                        // FIXME: we don't have an easy way to fetch all results, so we use a large
+                        //        limit – 10k tenants ought to be enough for anybody …
+                        .page(SearchQueryPage.of(b -> b.size(10_000)))))
+        .items();
+  }
+
+  public TenantEntity getById(final String tenantId) {
+    return getSingle(TenantQuery.of(q -> q.filter(f -> f.tenantId(tenantId))));
+  }
+
+  private TenantEntity getSingle(final TenantQuery query) {
+    final var result =
+        tenantSearchClient
+            .withSecurityContext(securityContextProvider.provideSecurityContext(authentication))
+            .searchTenants(query);
     if (result.total() < 1) {
-      throw new NotFoundException(String.format("Tenant with key %d not found", key));
-    } else {
-      return result.items().stream().findFirst().orElseThrow();
+      throw new NotFoundException("Tenant matching %s not found".formatted(query));
+    } else if (result.total() > 1) {
+      throw new CamundaSearchException("Found multiple tenants matching %s".formatted(query));
     }
+
+    final var tenantEntity = result.items().stream().findFirst().orElseThrow();
+    final var authorization = Authorization.of(a -> a.tenant().read());
+    if (!securityContextProvider.isAuthorized(
+        tenantEntity.tenantId(), authentication, authorization)) {
+      throw new ForbiddenException(authorization);
+    }
+    return tenantEntity;
   }
 
   public record TenantDTO(Long key, String tenantId, String name) {}
